# KMP-Trie-CompressedTrie-Comparison

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
final-result/: Trie_Compressed_Trie_result.txt  Trie_KMP_result.txt
include/: chart.hpp  checker.hpp  matplotlibcpp.hpp  mergeFiles.hpp  readWriteData.hpp  statistic.hpp
model/: KMP.cpp  KMP.hpp  Trie.cpp  Trie.hpp
